# timesketch-mcp-server

./: README.md  main.py  pyproject.toml
docker/: .env.sample  Dockerfile  docker-compose.yml
src/: main.py
src/timesketch_mcp_server/: tools.py  utils.py
