[project]
name = "timesketch-mcp-server"
version = "0.1.0"
description = "MCP server for Timesketch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.9.0",
    "timesketch-api-client>=20250521",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
